--- a/style.css
+++ b/style.css
@@ -2,41 +2,88 @@
  box-sizing: border-box; 
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  /* text-align: center; */
-  /* width: 80%; */
+header {
+  background-image: url('Images/tic-tac-toe-title.png')
 }
+
+body {
+  display: block; 
+  justify-content: center; 
+  text-align: center;
+  margin: auto;
+  width: 50%;
+  background-image: url(Images/super-mario-world.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center; 
+}
+
 .gameboard {
-  /* border: 1px solid ; */
+  /* border: 5px solid white; */
+  /* margin-left: 30%; */
+  height: 20em;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  width: 100%;
 }
 
 .gameboard div {
-  border: 2px solid black;
+  border: 5px solid rgba(255,255,255,0.7);
   flex: 0 0 32%;
+  margin-top: 5px;
   margin-bottom: 5px;
-  height: 100%;
+  height: 6em;
+  width: 5em;
   border-radius: 5px 5px 5px 5px;
-  background-color: rgb(245, 237, 227);
+  /* background-color: rgb(245, 237, 227); */
 }
 
 div.cell-noughts {
-  background-color: aqua;
-  border-radius: 5px 5px 5px 5px
+  /* background-color: aqua; */
+  background-image: url(Images/blue-toad-head.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center; 
+  border-radius: 5px 5px 5px 5px;
 }
 
 div.cell-crosses {
-  background-color: rgb(255, 89, 11);
-  border-radius: 5px 5px 5px 5px
+  /* background-color: rgb(255, 89, 11); */
+  background-image: url(Images/red-toad-head.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center; 
+  border-radius: 5px 5px 5px 5px;
 }
 
-.players {
+footer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   border: 2px solid black;
+  height: 50px;
+  width: auto;
+}
+
+.player1 {
+  display: flex;
+  justify-content: center;
+  width: 25%;
+  border: 2px solid black;
+}
+
+.player2 {
+  display: flex;
+  justify-content: center;
+  width: 25%;
+  border: 2px solid red;
+}
+
+.winner {
+  border: 2px solid black;
+  background-color: white;
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  height: 100%;
+  width: 50%;
 }
