fixed sizing and zoom issue

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   justify-content: center; 
   text-align: center;
   margin: auto;
-  width: 500px;
+  width: 1000px;
   height: 100vh;
   background-image: url(Images/super-mario-world.jpg);
   background-size: cover;
@@ -22,6 +22,7 @@ header {
   margin: auto;
   width: 75%;
   padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 img {
@@ -39,7 +40,9 @@ img {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
+  /* height: vh; */
   justify-content: space-around;
+  padding-bottom: 30px;
 }
 
 .gameboard div {
@@ -48,7 +51,7 @@ img {
   flex: 0 0 32%;
   margin-top: 5px;
   margin-bottom: 5px;
-  height: 8em;
+  height: 10em;
   width: 5em;
   transition: all 1s;
   border-radius: 5px 5px 5px 5px;
@@ -78,10 +81,11 @@ footer {
   display: flex;
   align-content: center;
   justify-content: space-between;
-  /* border: 2px solid red; */
+  border: 2px solid red;
   margin: auto;
-  height: 50px;
+  height: 100px;
   width: 75%;
+  transition: ease-in 1s;
 }
 
 .player1 {
@@ -91,6 +95,7 @@ footer {
   font-weight: bold;
   background-color: rgba(255, 255, 255, 0.7);
   width: 25%;
+  font-size: 35px;
   border: 1px solid rgb(168, 167, 167);
   border-radius: 5px 5px 5px 5px;
   box-shadow: 1px 1px rgb(168, 167, 167);
@@ -103,6 +108,7 @@ footer {
   font-weight: bold;
   background-color: rgba(255, 255, 255, 0.7);
   width: 25%;
+  font-size: 35px;
   border: 1px solid rgb(168, 167, 167);
   border-radius: 5px 5px 5px 5px;
   box-shadow: 1px 1px rgb(168, 167, 167);
@@ -124,22 +130,22 @@ footer {
   /* border: 1px solid black; */
   margin-left: auto;
 	margin-right: auto;
-  height: 2.5em;
-  width: 7em;
+  height: 5em;
+  width: 15em;
 }
 
 #blue-toad-wins {
   margin-left: auto;
 	margin-right: auto;
-  height: 2.5em;
-  width: 7em;
+  height: 5em;
+  width: 15em;
 }
 
 #draw-game {
   margin-left: auto;
 	margin-right: auto;
-  height: 2.5em;
-  width: 7em;
+  height: 5em;
+  width: 12em;
 }
 
 .hide {
@@ -147,12 +153,11 @@ footer {
 }
 
 #reset-btn {
-  height: 2.5em;
   border-radius: 5px 5px 5px 5px;
   background-color: white;
   margin-top: 2em;
-  align-content: center;
-  opacity: 0.8;
+  font-size: 25px;
+  padding: 0.5em;
 }
 
 #big-red-toad {
