--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ footer {
   display: flex;
   align-content: center;
   justify-content: space-between;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   margin: auto;
   height: 100px;
   width: 75%;
@@ -129,21 +129,24 @@ footer {
 #red-toad-wins {
   /* border: 1px solid black; */
   margin-left: auto;
-	margin-right: auto;
+  margin-right: auto;
+  margin-top: 5px;
   height: 5em;
   width: 15em;
 }
 
 #blue-toad-wins {
   margin-left: auto;
-	margin-right: auto;
+  margin-right: auto;
+  margin-top: 5px;
   height: 5em;
   width: 15em;
 }
 
 #draw-game {
   margin-left: auto;
-	margin-right: auto;
+  margin-right: auto;
+  margin-top: 5px;
   height: 5em;
   width: 12em;
 }
