--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 }
 
 body {
-  /* border: 2px solid black; */
   font-family: 'Indie Flower', cursive;
   font-weight: bold;
   display: block; 
@@ -19,7 +18,6 @@ body {
 }
 
 header {
-  /* border: 1px solid black; */
   margin: auto;
   width: 75%;
   padding-top: 30px;
@@ -122,7 +120,7 @@ footer {
 
 .winner {
   border: 5px solid rgba(255, 255, 255, 0.7);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.753);
   align-self: center;
   justify-content: center;
   align-content: center;
@@ -166,6 +164,8 @@ footer {
   background-color: rgba(255, 255, 255, 0.8);
   font-family: 'Indie Flower', cursive;
   font-weight: bold;
+  color: white;
+  text-shadow: -1.5px 0 black, 0 1.5px black, 1.5px 0 black, 0 -1.5px black;
   margin-top: 0.2em;
   font-size: 2em;
   padding: 0.5em;
